[tool.poetry]
name = "smartsearch"
version = "0.1.0"
description = ""
authors = ["Will Simpson <will@kestrelcreek.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.3"
rich = "^13.7.0"
collections2 = "^0.3.0"
urllib3 = "^2.1.0"
pycopy-plistlib = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
